[package]
name = "leptos_server_signal"
version = "0.2.0"
edition = "2021"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
description = "Leptos server signals synced through websockets"
repository = "https://github.com/tqwewe/leptos_server_signal"
license = "MIT"
keywords = ["leptos", "server", "signal", "websocket"]
categories = [
  "wasm",
  "web-programming",
  "web-programming::http-client",
  "web-programming::http-server",
  "web-programming::websocket"
]

[dependencies]
cfg-if = "1"
ciborium = "0.2.0"
dipa = "0.1.1"
js-sys = "0.3.61"
leptos = "0.2.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2.84", default-features = false }
web-sys = { version = "0.3.61", features = ["BinaryType", "WebSocket", "MessageEvent"] }

# Actix
actix-ws = { version = "0.2.5", optional = true }

# Axum
axum = { version = "0.6.18", default-features = false, features = ["ws"], optional = true }
futures = { version = "0.3.28", default-features = false, optional = true }
tokio = { version = "1.28.0", features = ["sync"], optional = true }

[features]
default = []
ssr = []
actix = ["dep:actix-ws"]
axum = ["dep:axum", "dep:futures", "dep:tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]